--- a/src/pages/Claim/ClaimToken.scss
+++ b/src/pages/Claim/ClaimToken.scss
@@ -1,5 +1,7 @@
 .claim-airdrop-token {
   /* min-height: calc(100% - 190px); */
+  width: 100%;
+  overflow-x: hidden;
   background-color: rgba(0, 0, 0, 0.8);
   &__banner {
     width: 100%;
@@ -231,6 +233,9 @@
 }
 @media (max-width: 800px) {
   .claim-airdrop-token {
+    width: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.8);
     padding: 0 20px;
     &__banner {
