--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -947,6 +947,7 @@ button.App-button-option:disabled {
   background: var(--color-layer-base) !important;
   height: 100%;
   overflow-y: overlay;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   // scrollbar-gutter: stable;
