--- a/src/pages/Mint/MintList/index.scss
+++ b/src/pages/Mint/MintList/index.scss
@@ -23,6 +23,7 @@
       width: 65%;
       margin: 0 auto;
       text-align: center;
+      padding-bottom: 30px;
       svg{
         g{
           g{
