--- a/src/pages/Mint/MintActivity/index.scss
+++ b/src/pages/Mint/MintActivity/index.scss
@@ -1,4 +1,4 @@
-.nostr-assets {
+.nostr-activity {
   &-titleh3 {
     font-size: 18px;
     font-weight: bold;
@@ -14,7 +14,7 @@
     }
   }
   &-form {
-    padding: 0 40px;
+    padding: 20px 40px;
     &-groupInfo {
       color: var(--color-text-light);
       font-weight: bold;
