feat:add mint assets

--- a/src/pages/Mint/comps/MintModal/index.scss
+++ b/src/pages/Mint/comps/MintModal/index.scss
@@ -9,6 +9,9 @@
         cursor: pointer;
       }
     }
+    .mint-modal-btn {
+      width: 120px;
+    }
   }
   .form-item-display {
     label {
