--- a/src/pages/Mint/MintDetail/index.scss
+++ b/src/pages/Mint/MintDetail/index.scss
@@ -49,11 +49,19 @@
           position: absolute;
           top: 0;
           left: 0;
-          transition: all 2s;
+          transition: all 1s;
+          .progress-percent-icon{
+            width: 35px;
+            height: 35px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translate(90%, -42%) rotate(45deg);
+          }
         }
         .progress-percent-text{
           position: absolute;
-          top: -26px;
+          top: -30px;
           transform: translateX(-50%);
         }
       }
