feat:mint modal

--- a/src/pages/Mint/comps/MintModal/index.scss
+++ b/src/pages/Mint/comps/MintModal/index.scss
@@ -12,6 +12,11 @@
     .mint-modal-btn {
       width: 120px;
     }
+    .number-mint-etra {
+      font-size: 12px;
+      font-weight: bold;
+      color: var(--color-text-light);
+    }
   }
   .form-item-display {
     label {
