--- a/src/pages/Claim/ClaimToken.scss
+++ b/src/pages/Claim/ClaimToken.scss
@@ -214,6 +214,11 @@
       font-weight: bold;
       font-size: 14px;
     }
+    h5 {
+      color: var(--color-text-light);
+      font-weight: bold;
+      font-size: 13px;
+    }
     &__child {
       padding-top: 10px;
       color: var(--color-text-base);
