feat:add mintCreate fee

--- a/src/pages/Mint/MintCreate/index.scss
+++ b/src/pages/Mint/MintCreate/index.scss
@@ -40,6 +40,10 @@
     }
     &-servicefee {
       width: 100%;
+      &__sat {
+        width: 100%;
+        padding-top: 20px;
+      }
     }
   }
   &-mint {
