--- a/src/pages/Mint/MintActivity/index.scss
+++ b/src/pages/Mint/MintActivity/index.scss
@@ -49,3 +49,17 @@
     justify-content: space-between;
   }
 }
+.select-dropdown-title{
+  display: flex;
+  padding: 4px 12px 8px;
+  border-bottom: 1px solid var(--color-border-grey);
+  font-size: 16px;
+  margin-bottom: 10px;
+  .select-dropdown-name{
+    width: 260px;
+  }
+  .select-dropdown-id{
+    padding-left: 10px;
+    flex: 1;
+  }
+}
