fix: MintActivity bug

--- a/src/pages/Mint/comps/MintModal/index.scss
+++ b/src/pages/Mint/comps/MintModal/index.scss
@@ -13,6 +13,9 @@
     .mint-modal-btn {
       width: 120px;
     }
+    .ant-form-item{
+      margin-bottom: 14px;
+    }
     .number-mint-etra {
       font-size: 12px;
       font-weight: bold;
