--- a/src/pages/Mint/MintActivity/index.scss
+++ b/src/pages/Mint/MintActivity/index.scss
@@ -11,6 +11,7 @@
       padding-top: 10px;
       color: var(--color-text-light);
       text-align: left;
+      line-height: 20px;
     }
   }
   &-form {
