fix:add errorBoundary

--- a/src/pages/Claim/ClaimToken.scss
+++ b/src/pages/Claim/ClaimToken.scss
@@ -185,8 +185,10 @@
     color: rgb(140, 82, 255);
     &__treat {
       bottom: -20px;
-      right: 110px;
+      right: 0px;
       color: rgb(255, 102, 196);
+      width: 100%;
+      text-align: left;
     }
   }
 }
@@ -396,10 +398,16 @@
       right: 10px;
       font-size: 12px;
       color: rgb(140, 82, 255);
+      &__trick {
+        width: 100%;
+        text-align: right;
+      }
       &__treat {
         bottom: -20px;
         right: 80px;
         color: rgb(255, 102, 196);
+        width: 100%;
+        text-align: left;
       }
     }
   }
