fix:issue assets status

--- a/src/pages/Mint/MintCreate/index.scss
+++ b/src/pages/Mint/MintCreate/index.scss
@@ -40,6 +40,7 @@
     }
     &-servicefee {
       width: 100%;
+      padding-top: 20px;
       &__sat {
         width: 100%;
         padding-top: 20px;
